Landing page content added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--=====================javascript =============================  -->
-        
+
     <script src="index.js"></script>
 
 
@@ -38,59 +38,124 @@
                         alt="internet connection is not available">&nbsp;<span>pragetX</span> </a></li>
         </ul>
     </div>
-<!-- ===================================== Navbar ============================================================== -->
+    <!-- ===================================== Navbar ============================================================== -->
+    <div id="landing">
+        <ul id="manubar">
+            <li><a href="#"><img src="https://pragetx.com/image/logo.svg" id="icon-image"></a></li>
 
-    <ul id="manubar">
-        <li style="margin-right:10%;"><a href="#"><img src="https://pragetx.com/image/logo.svg" id="icon-image"></a></li>
+            <li id="company"><a href="#">Company <span>^</span></a>
+                <ul id="company-dropdown-manu">
+                    <li id="company_icon"><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Pragetx</a></li>
+                    <li><a href="#"> <i class="fa-regular fa-circle-stop"></i>&nbsp; How We Work</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Referral Programs</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Become a Partners</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Internship & Training</a></li>
+                </ul>
+            </li>
 
-        <li id="company"><a href="#">Company <span>^</span></a>
-            <ul id="company-dropdown-manu">
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Pragetx</a></li>
-                <li><a href="#"> <i class="fa-regular fa-circle-stop"></i>&nbsp; How We Work</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Referral Programs</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Become a Partners</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Internship & Training</a></li>
-            </ul>
-        </li>
-
-        <li id="services"><a href="#">Services <span>^</span></a>
-            <ul class="service-dropdown-manu">
-                <li style="text-align: center; font-size: 20px; font-weight:bold;"><a href="#"> Our Services</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Custom Software Development</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Web App development</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Mobile App Development</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; UI/UX Design</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; QA & Test</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Enterprise IT Solutions</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Cloud Services</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; DevOPs Solutions</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Business Intelligrnce and analytics</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Digital Marketing</a></li>
-            </ul>
-        </li>   
+            <li id="services"><a href="#">Services <span>^</span></a>
+                <ul class="service-dropdown-manu">
+                    <li style="text-align: center; font-size: 20px; font-weight:bold;"><a href="#"> Our Services</a>
+                    </li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Custom Software Development</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Web App development</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Mobile App Development</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; UI/UX Design</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; QA & Test</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Enterprise IT Solutions</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Cloud Services</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; DevOPs Solutions</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Business Intelligrnce and
+                            analytics</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Digital Marketing</a></li>
+                </ul>
+            </li>
 
 
-        <li id="hire-developer"><a href="#">Hire Developers <span>^</span></a>
-            <ul class="hire-dropdown-manu">
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i> Hire iOs Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Android Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Node js Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire React js Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire React Native Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Flutter Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Angular Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire .Net Developers</a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire UI/UX Designers</a></li>
-                
-            </ul>
-        </li>
+            <li id="hire-developer"><a href="#">Hire Developers <span>^</span></a>
+                <ul class="hire-dropdown-manu">
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i> Hire iOs Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Android Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Node js Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire React js Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire React Native Developers</a>
+                    </li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Flutter Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire Angular Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire .Net Developers</a></li>
+                    <li><a href="#"><i class="fa-regular fa-circle-stop"></i>&nbsp; Hire UI/UX Designers</a></li>
 
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#"><i class="fa-regular fa-circle"></i>&nbsp;&nbsp; Careers</a></li>
-        <li style="margin-left:7%;" id="get-touch-btn"><a href="#">Get In Touch</a></li>
-    </ul>
+                </ul>
+            </li>
 
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li id="Careers"><a href="#">
+                    <div id="wave_circle"></div>&nbsp;Careers
+                </a></li>
+            <li id="get-touch-btn">Get In Touch</li>
+        </ul>
+
+        <!-- ===================== Landing part-1 ============================= -->
+        <div id="land_part_1">
+            <div>
+                <div id="part1_heading-1">
+                    Best &nbsp;&nbsp;
+                    <span id="chaltext"></span>
+                    &nbsp;&nbsp; in
+                </div>
+                <div id="part1_heading-2">
+                    the Age of Remote Work
+                </div>
+                <div id="part1_heading-3">
+                    We are proud extensive arm for MNCs, Startups, Government, Small & Mid Cap companies around the
+                    world in all industries, when it <br>
+                    comes to software product development & delivery partners
+                </div>
+                <button id="part1_button">Inquire Now &nbsp; ></button>
+            </div>
+
+        </div>
+        <!-- ========================= Landing Part2 ======================================= -->
+        <section id="part2_box">
+            <div id="part2_slider">
+                <img src="https://pragetx.com/ic/1ai-ml-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1iot-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1chatbot-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-android-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-apple-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-flutter-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-react-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-kotlin-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-swift-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-angular-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-vuejs-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-javascript-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-css3-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-html5-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-dot-net-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-php-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-python-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-nodejs-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-java-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-ruby-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-azure-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-aws-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-laravel-ic.svg" alt="">
+                <img src="https://pragetx.com/ic/1t-expressjs-ic.svg" alt="">
+            </div>
+        </section>
+    </div>
+    <!-- ============================ Landing part-3 ============================= -->
+    <section id="part3_box">
+        <div id="part3_heading">Emerging Technology Services</div>
+        <p id="part3_peragraph">Just automate everything. Be it in any industry. Businesses are advancing and shifting their traditional
+            workflows<br>
+            and approaches to digital automation, so why not switch from standard traditional procedure to automation
+            using Web 3.0<br>
+            platforms
+        </p>
+    </section>
 
 
 
