Emerging technology section updation

--- a/index.html
+++ b/index.html
@@ -149,12 +149,35 @@
     <!-- ============================ Landing part-3 ============================= -->
     <section id="part3_box">
         <div id="part3_heading">Emerging Technology Services</div>
-        <p id="part3_peragraph">Just automate everything. Be it in any industry. Businesses are advancing and shifting their traditional
-            workflows<br>
+        <div id="part3_peragraph">Just automate everything. Be it in any industry. Businesses are advancing and shifting their traditional
+            workflows
             and approaches to digital automation, so why not switch from standard traditional procedure to automation
-            using Web 3.0<br>
+            using Web 3.0
             platforms
-        </p>
+        </div>
+        <div id="part3_tech_box">
+            <div id="part3_one1">
+                <img src="https://pragetx.com/image/e-aiml.png" alt="">
+                <div id="part3_h1"><h1>AI & ML</h1></div>
+                <p id="part3_d">Refactor existing business processes and improve the decision-making approach of your 
+                    organization with the power of AI/ML capabilities
+                </p>
+            </div>
+            <div id="part3_one">
+                <img src="https://pragetx.com/image/e-iot.png" alt="">
+                <div id="part3_h1"><h1>IoT</h1></div>
+                <p id="part3_d">Establish instantaneous and cognitive communication between two smart devices with 
+                    the IoT integration servicese
+                </p>
+            </div>
+            <div id="part3_one">
+                <img src="https://pragetx.com/image/e-bigdata.png" alt="">
+                <div id="part3_h"><h1>Business Intelligence and Analytics</h1></div>
+                <p id="part3_d">Evolve your business decision-making abilities with the hire-developer
+                    of actinable data analytical insights and stay ahead in this intense market competition
+                </p>
+            </div>
+        </div>
     </section>
 
 
