--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
     <!-- ============================ Landing part-3 ============================= -->
     <section id="part3_box">
         <div id="part3_heading">Emerging Technology Services</div>
-        <div id="part3_peragraph">Just automate everything. Be it in any industry. Businesses are advancing and shifting their traditional
+        <div id="part3_peragraph">Just automate everything. Be it in any industry. Businesses are advancing and shifting
+            their traditional
             workflows
             and approaches to digital automation, so why not switch from standard traditional procedure to automation
             using Web 3.0
@@ -158,26 +159,69 @@
         <div id="part3_tech_box">
             <div id="part3_one1">
                 <img src="https://pragetx.com/image/e-aiml.png" alt="">
-                <div id="part3_h1"><h1>AI & ML</h1></div>
-                <p id="part3_d">Refactor existing business processes and improve the decision-making approach of your 
+                <div id="part3_h1">
+                    <h1>AI & ML</h1>
+                </div>
+                <p id="part3_d">Refactor existing business processes and improve the decision-making approach of your
                     organization with the power of AI/ML capabilities
                 </p>
             </div>
             <div id="part3_one">
                 <img src="https://pragetx.com/image/e-iot.png" alt="">
-                <div id="part3_h1"><h1>IoT</h1></div>
-                <p id="part3_d">Establish instantaneous and cognitive communication between two smart devices with 
+                <div id="part3_h1">
+                    <h1>IoT</h1>
+                </div>
+                <p id="part3_d">Establish instantaneous and cognitive communication between two smart devices with
                     the IoT integration servicese
                 </p>
             </div>
             <div id="part3_one">
                 <img src="https://pragetx.com/image/e-bigdata.png" alt="">
-                <div id="part3_h"><h1>Business Intelligence and Analytics</h1></div>
+                <div id="part3_h">
+                    <h1>Business Intelligence and Analytics</h1>
+                </div>
                 <p id="part3_d">Evolve your business decision-making abilities with the hire-developer
                     of actinable data analytical insights and stay ahead in this intense market competition
                 </p>
             </div>
         </div>
+    </section>
+    <!-- ==================== Landing part -4 ================================= -->
+
+    <section id="part4">
+        <p>
+            We are following all International<br />
+            Code Architectural Norms
+        </p>
+    </section>
+    <!-- =========================== Landing part -5 ================================ -->
+
+    <section id="part5">
+        <div id="part5_one">
+            <h1> Build You Companys' Pragetanam with PragetX</h1>
+            <h3>
+                Our IT Solutions Define Flexibility & Reliability In All Working Environments
+            </h3>
+            A team of smart and passionate leaders and adaptive software developers, working all together to deliver
+            customized IT solutions, like web & mobile app development, cloud computing, DevOps, and Enterprise IT
+            solutions, with precisions to meet the vision to help you build your brand credibility
+        </div>
+        <div id="part5_two">
+            <img src="https://pragetx.com/image/dots-square.png" id="transp_img" alt="">
+            <div id="color"></div>
+            <img src="https://pragetx.com/image/about-img.jpg" alt="">
+        </div>
+    </section>
+    <!-- ======================= Landing part-6 ====================== -->
+
+    <section id="part6">
+         <div id="part6_one"></div>
+         <div id="part6_one"></div>
+         <div id="part6_one"></div>
+         <div id="part6_one"></div>
+         <div id="part6_one"></div>
+         <div id="part6_one"></div>
+
     </section>
 
 
