--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         alt="internet connection is not available">&nbsp;<span>pragetX</span> </a></li>
         </ul>
     </div>
+    <!-- hello  my name name is akshay and show in your project   -->
     <!-- ===================================== Navbar ============================================================== -->
     <div id="landing">
         <ul id="manubar">
