--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                         alt="internet connection is not available">&nbsp;<span>pragetX</span> </a></li>
         </ul>
     </div>
-    <!-- hello  my name name is akshay and show in your project   -->
+    <!-- hello  my name name isroject   -->
     <!-- ===================================== Navbar ============================================================== -->
     <div id="landing">
         <ul id="manubar">
+
+            <!-- djadgau> -->
             <li><a href="#"><img src="https://pragetx.com/image/logo.svg" id="icon-image"></a></li>
 
             <li id="company"><a href="#">Company <span>^</span></a>
