--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- ===================================== Navbar ============================================================== -->
     <div id="landing">
         <ul id="manubar">
-
+            <h1>Arpit</h1>
             <!-- djadgau> -->
             <li><a href="#"><img src="https://pragetx.com/image/logo.svg" id="icon-image"></a></li>
 
