--- a/form.html
+++ b/form.html
@@ -136,6 +136,7 @@
 </head>
 
 <body>
+    <h1>Form</h1>
     <form action="#" method="post" autocomplete="on" target="-blank"
         oninput="x.value=parseInt(a.value)+parseInt(b.value)">
         <label for="fname">enter your name</label>
